--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
           <div class="card card-register">
             <h3 class="title">Bienvenido</h3>
             <div class="social-line text-center">
-              <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
+              <a href="http://localhost:8000/registrar-facebook" class="btn btn-neutral btn-facebook btn-just-icon">
                 <i class="fa fa-facebook-square"></i>
               </a>
               <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
