Personalización del template paperkit, cambio de nombres, rutas, cambios en la barra de navegación y footer.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,9 +3,8 @@
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a [routerLink]="['/home']">Creative Tim</a></li>
-                    <li><a href="http://blog.creative-tim.com">Blog</a></li>
-                    <li><a href="https://www.creative-tim.com/license">Licenses</a></li>
+                    <li><a [routerLink]="['/home']">Home</a></li>
+                    <li><a href="http://www.ucn.cl">UCN</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
