Nuevo branch para continuar desarrollo del componente para usar la api Google maps y AGM maps

--- a/src/app/components/dawe-google-maps/dawe-google-maps.component.html
+++ b/src/app/components/dawe-google-maps/dawe-google-maps.component.html
@@ -4,9 +4,9 @@
     <div *ngIf="mapOrigin">
         <agm-map [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng">
             <agm-marker [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng"></agm-marker>
-            <div *ngIf="marks">
-                <div *ngFor="let mark of marks">
-                    <agm-marker [latitude]="mark.lat" [longitude]="mark.lng" iconUrl="../assets/img/icons/E-icon.svg"></agm-marker>
+            <div *ngIf="locales">
+                <div *ngFor="let local of locales">
+                    <agm-marker [latitude]="local.latitud" [longitude]="local.longitud" iconUrl="../assets/img/icons/E-icon.svg"></agm-marker>
                 </div>
             </div>
         </agm-map>
