--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -38,7 +38,7 @@
                     <a [routerLink]="['/login']" class="nav-link" ><i class="nc-icon nc-badge"></i> Login</a>
                 </li>
                 <li class="nav-item" *ngIf="!isSignup()">
-                    <a [routerLink]="['/signup']" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Registro</a>
+                    <a [routerLink]="['/signup']" class="nav-link"><i class="nc-icon nc-book-bookmark"></i> Registro</a>
                 </li>
                 <!-- <li class="nav-item" *ngIf="isHome()">
                     <a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-danger btn-round disabled">Upgrade to Pro</a>
