Added: Validaciones para el registro (frontend)
Agregado:
+Validaciones de inputs
+JSONificación del objeto usuario
Falta por hacer:
-Comunicación con el back-end (uso de usuario service)
-Estética (mostrar en rojo/verde campos inválidos/válidos)

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,8 +4,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
+                    <div *ngIf="submitted">
+                        <div>
+                            <h2>{{ mensajeResultado }}</h2>
+                        </div>
+                    </div>
                     <div class="card card-register">
-                        <h3 class="title">Creando mi cuenta!</h3>
+                        <h3  class="title">Creando mi cuenta!</h3>
                         <div class="social-line text-center">
                             <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
                                 <i class="fa fa-facebook-square"></i>
@@ -17,27 +22,35 @@
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </div>
-                        <form class="register-form" name="registroForm">
+                        <form class="register-form" (ngSubmit)="processForm()" *ngIf="!submitted"
+                              [ngClass]="{ 'has-error': email.invalid && email.touched}" #form="ngForm">
+                            {{form.valid}}
+                            {{ json}}
                             <label>Nombre</label>
-                            <input  [ngModel]="usuario.nombre" name="nombre" type="text" class="form-control" placeholder="Juan" [required]="true">
-                            <div *ngIf="nombre.invalid && (nombre.dirty || nombre.touched)"
-                                 class="alert alert-danger"></div>
+                            <input [(ngModel)]="usuario.nombre" name="nombre" type="text" class="form-control"
+                                   placeholder="Juan" [required]="true" #nombre maxlength="100">
+
                             <label>Apellido paterno</label>
-                            <input  [ngModel]="usuario.apellido_paterno" name="apellidoPaterno" type="text" class="form-control" placeholder="Pérez" [required]="true">
-
+                            <input  [(ngModel)]="usuario.apellido_paterno" name="apellidoPaterno" type="text"
+                                    class="form-control" placeholder="Pérez" [required]="true" #apPaterno
+                                    maxlength="100">
                             <label>Apellido materno</label>
-                            <input  [ngModel]="usuario.apellido_materno" name="apellidoMaterno" type="text" class="form-control" placeholder="Pereira" [required]="true">
-
+                            <input  [(ngModel)]="usuario.apellido_materno" name="apellidoMaterno" type="text"
+                                    class="form-control" placeholder="Pereira" #apMaterno
+                                    maxlength="100">
                             <label>Teléfono</label>
-                            <input  [ngModel]="usuario.telefono" name="telefono" type="text" class="form-control" placeholder="+56912345678 (opcional)">
-
+                            <input  [(ngModel)]="usuario.telefono" name="telefono" type="text" class="form-control"
+                                    placeholder="+56912345678 (opcional)" #telefono  maxlength="25">
                             <label>Email</label>
-                            <input  [ngModel]="usuario.email" name="email" type="email" class="form-control" placeholder="ejemplo@gmail.com" [required]="true">
+                            <input  [(ngModel)]="usuario.email" name="email" type="email" class="form-control"
+                                    placeholder="ejemplo@gmail.com" [required]="true" #email="ngModel" email
+                                    maxlength="120">
 
                             <label>Contraseña</label>
-                            <input  [ngModel]="usuario.contrasenia" name="password" type="password" class="form-control" placeholder="Al menos una mayúscula" [required]="true">
-
-                            <button type="submit" (click)="submit(usuario)" class="btn btn-danger btn-block btn-round">Registrar</button>
+                            <input  [(ngModel)]="usuario.contrasenia" name="password" type="password" #contrasenia
+                                    class="form-control" placeholder="*********"
+                                    [required]="true" maxlength="100">
+                            <button type="submit" class="btn btn-danger btn-block btn-round">Registrar</button>
                         </form>
                     </div>
                 </div>
