--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -34,8 +34,14 @@
                         <p class="d-lg-none">GitHub</p>
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isLogin()">
+                <li class="nav-item" *ngIf="!usuario">
                     <a [routerLink]="['/login']" class="nav-link" ><i class="nc-icon nc-badge"></i> Login</a>
+                </li>
+                <li class="nav-item" *ngIf="usuario">
+                    <a [routerLink]="['/']" class="nav-link" ><i class="nc-icon nc-badge"></i> {{usuario.nombre}}</a>
+                </li>
+                <li class="nav-item" *ngIf="usuario">
+                    <a (click)="salir()" class="nav-link" ><i class="nc-icon nc-badge"></i> Salir</a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
