--- a/src/app/custom_components/dawe-google-maps/dawe-google-maps.component.html
+++ b/src/app/custom_components/dawe-google-maps/dawe-google-maps.component.html
@@ -2,7 +2,7 @@
   <!-- this creates a google map on the page with the given lat/lng from -->
   <!-- the component as the initial center of the map: -->
     <div *ngIf="mapOrigin">
-        <agm-map [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng">
+        <agm-map [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng" [zoom]="mapZoom">
             <agm-marker [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng"></agm-marker>
             <div *ngIf="locales">
                 <div *ngFor="let local of locales">
