--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">Paper kit 2 designed and coded by
+        <h6 class="text-center category-absolute ml-auto mr-auto">Paper kit 2 designed and coded by
             <!-- <h6 class="category category-absolute">Designed and coded by -->
 
             <a href="https://www.creative-tim.com" target="_blank">
@@ -29,7 +29,7 @@
         </h6>
     </div>
     <div class="main">
-
+        <app-buscar-estacionamiento></app-buscar-estacionamiento>
     </div>
 </div>
 
