Se cargan los marcadores para los estacionamientos en el mapa, se crean los modelos, controladores, y rutas para estacionmientos y locales en el servidor

--- a/src/app/custom_components/dawe-google-maps/dawe-google-maps.component.html
+++ b/src/app/custom_components/dawe-google-maps/dawe-google-maps.component.html
@@ -6,7 +6,7 @@
             <agm-marker [latitude]="mapOrigin.lat" [longitude]="mapOrigin.lng"></agm-marker>
             <div *ngIf="locales">
                 <div *ngFor="let local of locales">
-                    <agm-marker [latitude]="local.latitud" [longitude]="local.longitud" iconUrl="../assets/img/icons/E-icon.svg"></agm-marker>
+                    <agm-marker [latitude]="local.latitud" [longitude]="local.longitud"></agm-marker>
                 </div>
             </div>
         </agm-map>
