--- a/src/app/custom_components/buscar-estacionamiento/buscar-estacionamiento.component.html
+++ b/src/app/custom_components/buscar-estacionamiento/buscar-estacionamiento.component.html
@@ -13,8 +13,8 @@
                  <br>
                  <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
                      <ngb-panel title="Map">
-                         <ng-template ngbPanelContent>
-                             <app-dawe-google-maps [mapOrigin]="{lat: origin.lat, lng : origin.lng}"></app-dawe-google-maps>
+                         <ng-template ngbPanelContent *ngIf="parking_lots">
+                             <app-dawe-google-maps [mapOrigin]="{lat: origin.lat, lng : origin.lng}" [locales]="[parking_lots]"></app-dawe-google-maps>
                          </ng-template>
                      </ngb-panel>
 
